# $Id: Makefile.am,v 1.1 2003/08/12 16:13:47 alexios Exp $
#
# $Log: Makefile.am,v $
# Revision 1.1  2003/08/12 16:13:47  alexios
# Initial revision.
#

# util examples man
man_MANS=\
	d_dbfpath.3      d_keyfind.3  d_open.3     d_recwrite.3 \
	d_close.3    d_dbget.3        d_keyfrst.3  d_recfrst.3  d_setfiles.3 \
	d_crget.3    d_dbset.3        d_keylast.3  d_reclast.3  ddlp.1 \
	d_crread.3   d_delete.3       d_keynext.3  d_recnext.3  \
	d_crset.3    d_fillnew.3      d_keyprev.3  d_recprev.3 \
	d_dbdpath.3  d_getsequence.3  d_keyread.3  d_recread.3
